# claw-network

./: .gitignore  README.md  version-manifest.json
.github/workflows/: docker.yml  release.yml
claw-bridge/: FIXES.md  package-lock.json  package.json  tsconfig.json  vitest.setup.ts
claw-bridge/src/: bridge.ts  index.ts  types.ts
claw-bridge/src/__tests__/: bridge.test.ts
claw-mcp/: package-lock.json  package.json
claw-mcp/src/: index.ts
claw-miner/: .gitignore  README.md  pyproject.toml
claw-miner/docs/: install.md  update.md
claw-miner/src/clawminer/: __init__.py  cli.py  config.py  constants.py  miner.py  rpc.py  tx.py  wallet.py
claw-miner/tests/: test_config.py  test_miner.py  test_rpc.py  test_tx.py  test_wallet.py
claw-node/: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  genesis.json
claw-node/crates/consensus/: Cargo.toml
claw-node/crates/consensus/src/: election.rs  lib.rs  slashing.rs  tests.rs  types.rs  validator_set.rs  voting.rs
claw-node/crates/crypto/: Cargo.toml
claw-node/crates/crypto/src/: keys.rs  lib.rs  merkle.rs  signer.rs
claw-node/crates/node/: Cargo.toml
claw-node/crates/node/src/: chain.rs  config.rs  genesis.rs  main.rs  metrics.rs  network.rs  rpc_server.rs  sync.rs  version_check.rs
claw-node/crates/p2p/: Cargo.toml
claw-node/crates/p2p/src/: behaviour.rs  lib.rs  network.rs  protocol.rs
claw-node/crates/rpc/: Cargo.toml
claw-node/crates/rpc/src/: lib.rs
claw-node/crates/sdk/: Cargo.toml
claw-node/crates/sdk/src/: contract.rs  env.rs  lib.rs  storage.rs  types.rs
claw-node/crates/state/: Cargo.toml
claw-node/crates/state/src/: error.rs  handlers.rs  lib.rs  rewards.rs  score.rs  tests.rs  world.rs
claw-node/crates/state/tests/: e2e.rs
claw-node/crates/storage/: Cargo.toml
claw-node/crates/storage/src/: lib.rs  store.rs  tests.rs
claw-node/crates/test-framework/: Cargo.toml
claw-node/crates/test-framework/src/: lib.rs
claw-node/crates/test-framework/tests/: env_tests.rs
claw-node/crates/types/: Cargo.toml
claw-node/crates/types/src/: block.rs  lib.rs  receipt.rs  state.rs  tests.rs  transaction.rs
claw-node/crates/vm/: Cargo.toml
claw-node/crates/vm/src/: constants.rs  engine.rs  error.rs  host.rs  lib.rs  types.rs  validate.rs
claw-node/crates/vm/tests/: contract_events.rs  cross_contract_calls.rs  error_messages.rs  read_only_view.rs  token_balance_hi.rs  wasm_memory_limit.rs
claw-node/deploy/: claw-node.service
claw-node/docs/: DEPLOYMENT.md
claw-node/scripts/: deploy-alibaba.sh  deploy-hetzner.sh  install.ps1  install.sh  setup-hetzner.sh
claw-sdk/: README.md  package-lock.json  package.json  tsconfig.json
claw-sdk/src/: client.ts  hash.ts  index.ts  rpc.ts  serialization.ts  types.ts  wallet.ts
claw-sdk/tests/: sdk.test.ts
clawnetwork-openclaw/: README.md  index.ts  install.ps1  install.sh  openclaw.plugin.json  package.json  uninstall.ps1  uninstall.sh
clawnetwork-openclaw/tests/: unit.test.mjs
clawpay/: README.md  package-lock.json  package.json  tsconfig.json
clawpay/src/: cli.ts  client.ts  index.ts  server.ts
clawpay/src/core/: rpc.ts  transaction.ts  types.ts  wallet.ts
clawpay/src/middleware/: express.ts  hono.ts  nextjs.ts  verify.ts
clawpay/src/protocol/: challenge.ts  credential.ts  receipt.ts
clawpay/tests/: middleware.test.ts  protocol.test.ts  transaction.test.ts  wallet.test.ts
contracts/: Cargo.toml  README.md
contracts/arena-pool/: Cargo.toml
contracts/arena-pool/src/: lib.rs  logic.rs  types.rs
contracts/arena-pool/tests/: integration.rs
contracts/reward-vault/: Cargo.toml
contracts/reward-vault/src/: lib.rs  logic.rs  mock.rs  types.rs
contracts/reward-vault/tests/: integration.rs
contracts/templates/: README.md
deploy-internal/: deploy-all.sh  deploy-hetzner.sh
docs/: CHAIN-RESET-PLAN.md  DOWNTIME-PENALTY-REDESIGN.md  MAINNET-UPGRADE-SOP.md  PROTOCOL.md  STAKING-REFACTOR-PLAN.md  VALIDATOR-ECONOMICS.md  contract-versioning.md  integration-guide.md  smart-contract-guide.md  smart-contracts.md
docs/fix-plans/: audit-gossipsub-insufficient-peers-v058.md  plan-gossipsub-insufficient-peers-fix.md  plan-p2p-checkin-relay-fix.md
docs/plans/: 2026-03-22-agent-mining-design.md  2026-03-22-agent-mining-implementation-plan.md  2026-03-22-agent-mining-review-notes.md  2026-04-03-mining-heartbeat-redesign.md  2026-04-03-state-root-versioning.md
docs/research/: decentralized-ai-compute-competitive-analysis.md
explorer-indexer/: config.py  explorer-indexer.env.example  explorer-indexer.service  indexer.py
scripts/: build-contracts.sh  deploy-contract.sh
tools/claw-contract/: Cargo.toml
tools/claw-contract/src/: args.rs  key.rs  main.rs  new.rs  rpc.rs  tx.rs
tools/claw-contract/src/tests/: mod.rs
