[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/crypto",
    "crates/state",
    "crates/storage",
    "crates/consensus",
    "crates/p2p",
    "crates/rpc",
    "crates/node",
    "crates/vm",
    "crates/sdk",
]

[workspace.package]
version = "0.4.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/clawlabz/claw-network"

[workspace.dependencies]
# Internal crates
claw-types = { path = "crates/types" }
claw-crypto = { path = "crates/crypto" }
claw-state = { path = "crates/state" }
claw-storage = { path = "crates/storage" }
claw-consensus = { path = "crates/consensus" }
claw-p2p = { path = "crates/p2p" }
claw-rpc = { path = "crates/rpc" }
claw-vm = { path = "crates/vm" }

# Wasm VM
wasmer = { version = "4", default-features = false, features = ["singlepass"] }

# Serialization
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
rand = "0.8"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"

# Storage (pure Rust, no C++ dependency)
redb = "2"

# Networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "request-response", "autonat", "relay", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }

# HTTP/RPC
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
toml = "0.8"

# Utils
hex = "0.4"
thiserror = "2"
anyhow = "1"

# Metrics
prometheus = "0.13"

# Testing
proptest = "1"
