[package]
name = "claw-contract"
version = "0.1.0"
edition = "2021"
description = "Developer CLI for ClawNetwork smart contracts"
license = "MIT"

[[bin]]
name = "claw-contract"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
