[package]
name = "claw-vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wasmer.workspace = true
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
blake3 = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
wat = "1"
